--- a/YT_Azure_OpeanAI_Agents_Basic.ipynb
+++ b/YT_Azure_OpeanAI_Agents_Basic.ipynb
@@ -16,70 +16,11 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "c2pqWDEY9GuG",
-        "outputId": "ce99fdd8-e92b-43ae-afbc-4fc4ae51d1d2"
+        "id": "c2pqWDEY9GuG"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: openai in /usr/local/lib/python3.11/dist-packages (1.66.3)\n",
-            "Collecting openai-agents\n",
-            "  Downloading openai_agents-0.0.6-py3-none-any.whl.metadata (8.0 kB)\n",
-            "Collecting dotenv\n",
-            "  Downloading dotenv-0.9.9-py2.py3-none-any.whl.metadata (279 bytes)\n",
-            "Requirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.11/dist-packages (from openai) (4.9.0)\n",
-            "Requirement already satisfied: distro<2,>=1.7.0 in /usr/local/lib/python3.11/dist-packages (from openai) (1.9.0)\n",
-            "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.11/dist-packages (from openai) (0.28.1)\n",
-            "Requirement already satisfied: jiter<1,>=0.4.0 in /usr/local/lib/python3.11/dist-packages (from openai) (0.9.0)\n",
-            "Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.11/dist-packages (from openai) (2.10.6)\n",
-            "Requirement already satisfied: sniffio in /usr/local/lib/python3.11/dist-packages (from openai) (1.3.1)\n",
-            "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.11/dist-packages (from openai) (4.67.1)\n",
-            "Requirement already satisfied: typing-extensions<5,>=4.11 in /usr/local/lib/python3.11/dist-packages (from openai) (4.12.2)\n",
-            "Collecting griffe<2,>=1.5.6 (from openai-agents)\n",
-            "  Downloading griffe-1.6.2-py3-none-any.whl.metadata (5.0 kB)\n",
-            "Collecting openai\n",
-            "  Downloading openai-1.68.2-py3-none-any.whl.metadata (25 kB)\n",
-            "Requirement already satisfied: requests<3,>=2.0 in /usr/local/lib/python3.11/dist-packages (from openai-agents) (2.32.3)\n",
-            "Collecting types-requests<3,>=2.0 (from openai-agents)\n",
-            "  Downloading types_requests-2.32.0.20250306-py3-none-any.whl.metadata (2.3 kB)\n",
-            "Collecting python-dotenv (from dotenv)\n",
-            "  Downloading python_dotenv-1.0.1-py3-none-any.whl.metadata (23 kB)\n",
-            "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.11/dist-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
-            "Collecting colorama>=0.4 (from griffe<2,>=1.5.6->openai-agents)\n",
-            "  Downloading colorama-0.4.6-py2.py3-none-any.whl.metadata (17 kB)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.11/dist-packages (from httpx<1,>=0.23.0->openai) (2025.1.31)\n",
-            "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.11/dist-packages (from httpx<1,>=0.23.0->openai) (1.0.7)\n",
-            "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.11/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
-            "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.11/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
-            "Requirement already satisfied: pydantic-core==2.27.2 in /usr/local/lib/python3.11/dist-packages (from pydantic<3,>=1.9.0->openai) (2.27.2)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2.0->openai-agents) (3.4.1)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2.0->openai-agents) (2.3.0)\n",
-            "Downloading openai_agents-0.0.6-py3-none-any.whl (98 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m98.9/98.9 kB\u001b[0m \u001b[31m4.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading openai-1.68.2-py3-none-any.whl (606 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m606.1/606.1 kB\u001b[0m \u001b[31m19.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading dotenv-0.9.9-py2.py3-none-any.whl (1.9 kB)\n",
-            "Downloading griffe-1.6.2-py3-none-any.whl (128 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m128.6/128.6 kB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading types_requests-2.32.0.20250306-py3-none-any.whl (20 kB)\n",
-            "Downloading python_dotenv-1.0.1-py3-none-any.whl (19 kB)\n",
-            "Downloading colorama-0.4.6-py2.py3-none-any.whl (25 kB)\n",
-            "Installing collected packages: types-requests, python-dotenv, colorama, griffe, dotenv, openai, openai-agents\n",
-            "  Attempting uninstall: openai\n",
-            "    Found existing installation: openai 1.66.3\n",
-            "    Uninstalling openai-1.66.3:\n",
-            "      Successfully uninstalled openai-1.66.3\n",
-            "Successfully installed colorama-0.4.6 dotenv-0.9.9 griffe-1.6.2 openai-1.68.2 openai-agents-0.0.6 python-dotenv-1.0.1 types-requests-2.32.0.20250306\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install openai openai-agents dotenv"
       ]
@@ -125,7 +66,7 @@
       "metadata": {
         "id": "1h48y9Fj-ZlG"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -199,6 +140,18 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import nest_asyncio\n",
+        "nest_asyncio.apply()"
+      ],
+      "metadata": {
+        "id": "D_JvgB2RiGfi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Ejecución síncrona"
@@ -260,6 +213,46 @@
       ],
       "metadata": {
         "id": "9TIJu82esWc-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ejecución streaming mode"
+      ],
+      "metadata": {
+        "id": "r2kUwn0YYoLI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import asyncio\n",
+        "from openai.types.responses import ResponseTextDeltaEvent\n",
+        "\n",
+        "result = Runner.run_streamed(agent, input=\"cuanto cuesta cada plato del menu?\")\n",
+        "async for event in result.stream_events():\n",
+        "    if event.type == \"raw_response_event\" and isinstance(event.data, ResponseTextDeltaEvent):\n",
+        "        print(event.data.delta, end=\"\", flush=True)"
+      ],
+      "metadata": {
+        "id": "HXdW2wJSYnws"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = Runner.run_streamed(agent, input=\"cuanto cuesta 2 porciones de cada plato del menu?\")\n",
+        "async for event in result.stream_events():\n",
+        "    if event.type == \"raw_response_event\" and isinstance(event.data, ResponseTextDeltaEvent):\n",
+        "        print(event.data.delta, end=\"\", flush=True)"
+      ],
+      "metadata": {
+        "id": "Nu-AJkpbZ3hx"
       },
       "execution_count": null,
       "outputs": []
